Adding documentation with swag, on products endpoint
